fixed contrast switch being a bit off

--- a/stylesheets/global/#top-menu.sass
+++ b/stylesheets/global/#top-menu.sass
@@ -32,13 +32,14 @@
 		font-size: 16px
 		margin-right: 14px
 		font-family: $iconfont
-		vertical-align: -1px
 		float: right
 		transition: 1s fade
 		-webkit-transition: text-shadow 3s ease
 		-moz-transition: text-shadow 3s ease
 		-o-transition: text-shadow 3s ease
 		transition: text-shadow 0.5s ease
+		position: relative
+		top: -2px
 		&:hover
 			color:white
 			text-shadow: 0px 0px 14px white
